languages/io-automaton-fe/src/test/resources/invalid/ActionsMultipleTimes.ioautomaton
package invalid;

automaton ActionsMultipleTimes {

    input int i;
    
    output int a;
    output int a;
    
    output int j;
    output double j;

	state Idle;	
	initial Idle;
}